--- a/frontend/src/components/PostProjects.css
+++ b/frontend/src/components/PostProjects.css
@@ -24,7 +24,7 @@
 }
 
 .card-data{
-    width: 95%;
+    width: 85%;
     padding: 1.5rem 2rem 2rem 1rem;
     background: linear-gradient(to right, #1b1d52, 30%, #33279e);
     box-shadow: 0 8px 24px hsla(248, 44%, 26%, 0.15);
@@ -145,5 +145,48 @@
     }
     50%{
         overflow: hidden;
+    }
+}
+
+
+@media (max-width: 784px) {
+    .article-photos-projects img{
+        width: 100%;
+        height: 350px;
+    }
+
+    .card-data{
+        width: 80%;
+    }
+
+    .card-title{
+        font-size: 1em;
+    }
+
+    .card-description{
+        font-size: 1em;
+    }
+
+    .card-list-text a{
+        font-size: 1.2em;
+        font-weight: bold;
+    }
+
+    .article-photos-projects:hover .card-data{
+        animation: none;
+        opacity: none;
+        transition: none;
+    }
+
+    .article-photos-projects:hover{
+        animation:none;
+    }
+    
+    .article-photos-projects:not(:hover){
+        animation: none;
+    }
+    
+    .article-photos-projects:not(:hover) .card-data{
+        animation: none;
     }
 }
