--- a/frontend/src/components/Footer.css
+++ b/frontend/src/components/Footer.css
@@ -2,9 +2,10 @@
     position: relative;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    justify-items: center;
     padding-left: 2rem;
     background: linear-gradient(to right top, var(--component-my-skill), 70%, var(--bkg-color));
-    height: 100%;
+    height: 100%; 
     padding: 0; margin: 0;
 }
 
@@ -69,14 +70,24 @@
 }
 
 @media screen and (max-width: 820px){
+    .footer-container{
+        border-radius: 0px;
+        width: 100%;
+    }
+    
     .lista-links p{
-        font-size: .9em;
+        font-size: .8em;
         font-weight: bold;
         text-transform: uppercase;
     }
 }
 
 @media screen and (max-width: 768px){
+    footer{
+        display: flex;
+        justify-content: center;
+    }
+
     .footer-container{
         grid-template-columns: repeat(1, 1fr);
         grid-template-rows: auto 1fr;
@@ -84,6 +95,7 @@
         "company_name"
         "container-lista"
         "lista-links";
+
     }
 
     .company_name,
@@ -107,6 +119,10 @@
         grid-area: lista-links;
     }
 
+    .lista-links p{
+        font-size: 1em;
+    }
+
     .links-footer{
         display: flex;
         flex-direction: row;
@@ -115,6 +131,7 @@
 }
 
 @media screen and (max-width: 426px){
+    
     .company_name{
         justify-content: start;
         text-align: center;
