--- a/frontend/src/components/Messages/MessageWithButton.css
+++ b/frontend/src/components/Messages/MessageWithButton.css
@@ -33,13 +33,12 @@
     justify-content: center;
     text-align: center;
     border-radius: 100px;
-    width: 10vw;
-    height: 6vh;
+    width: 10vw; height: 6vh;
     background-color: #000;
     text-decoration: none;
     text-transform: uppercase;
     font-weight: 500;
-    letter-spacing: 2px;
+    letter-spacing: 1px;
     transition: transform 0.5s, background-color 0.5s, letter-spacing 0.5s, box-shadow 0.5s;
 }
 
@@ -66,7 +65,7 @@
     }
     
     .component_text ul{
-        margin: 4% 0px 20px 0px;
+        margin: 20px 0px 20px 0px;
         padding: 0px;
     }
 }
