--- a/frontend/src/components/Navbar.css
+++ b/frontend/src/components/Navbar.css
@@ -86,7 +86,7 @@
 .burger{
     display: flex;
     justify-content: center;
-    align-items: end;
+    align-items: flex-end;
     flex-wrap: wrap;
     flex-direction: column;
     font-size: 52px;
@@ -109,7 +109,7 @@
         list-style: none;
         display: flex;
         justify-content: center;
-        align-items: end;
+        align-items: flex-end;
         gap: 20px;
     }
 
